force-app/main/default/objects/UserCustomObject__c/UserCustomObject__c.object-meta.xml
<CustomObject>
    <label>UserCustomObject</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>UserCustomId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>