force-app/main/default/objects/UserCustomObject__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>