force-app/main/default/objects/UserCustomObject__c/fields/Email_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Email_Encoding__c</fullName>
    <label>Email Encoding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General US &amp;amp;amp; Western Europe (ISO-8859-1, ISO-LATIN-1)</fullName>
            </value>
            <value>
                <fullName>Unicode (UTF-8)</fullName>
            </value>
            <value>
                <fullName>Japanese (Shift-JIS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>