force-app/main/default/objects/UserCustomObject__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Standard Platform User</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
            </value>
            <value>
                <fullName>Standard User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>