force-app/main/default/objects/UserCustomObject__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</fullName>
            </value>
            <value>
                <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>