force-app/main/default/objects/UserCustomObject__c/fields/TIP_Role__c.field-meta.xml
<CustomField>
    <fullName>TIP_Role__c</fullName>
    <label>TIP Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDA</fullName>
            </value>
            <value>
                <fullName>DQH</fullName>
            </value>
            <value>
                <fullName>WERCS Coordinator</fullName>
            </value>
            <value>
                <fullName>Packaging Scorecard SPOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>